# Purplle

./: .dockerignore  .env.example  .gitignore  Dockerfile  FINAL_AUDIT.md  FINAL_RELEASE_CHECKLIST.md  README.md  RELEASE_NOTES.md  REVIEWER_GUIDE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
docs/: CHOICES.md  DESIGN.md  SUBMISSION_ASSETS.md  problem_statement_extracted.txt
pipeline/: run.sh
public/: index.html
scripts/: extract_pdf_text.py  run_pipeline.ps1  smoke_http.py
store_intelligence/: __init__.py  __main__.py  analytics.py  db.py  repository.py  schemas.py  services.py  settings.py
store_intelligence/api/: __init__.py  main.py  requirements.txt
store_intelligence/api/templates/: dashboard.html
store_intelligence/pipeline/: __init__.py  detect.py  emit.py  layout.py  tracker.py
tests/: conftest.py  test_anomalies.py  test_api.py  test_api_integration.py  test_edge_cases.py  test_main_entrypoint.py  test_metrics.py  test_pipeline.py
